welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = new Array[Color](getMondeLargeur())
  var a=0
  a=getWorldHeight()-1
  save()
  recule(getMondeLargeur())
  for (j <- 0 to getMondeLargeur()-2){ 
    gauche()
    avance()
    droite()    
      for(k <- 0 to getMondeLargeur()-2){
    	setCouleurBrosse(T(k))
      avance()
    	baisseBrosse()
      leveBrosse()
      } 	      
  }
  
  
//  val decalage = litMessage().toInt
//	(i + 1) % getMondeLargeur
}
  

 
  
def save(){
  for(i<- 0 to getMondeLargeur()-2){
  	T(i)=getCouleurSol()
  	avance()
  }
}
 
  
